Adding Aspects to start logging public methods
Adding Aspects to start logging public methods
- the statistics is working
- the general log are not display in the console (using the code of the professor) -> TO BE FIXED
